// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Renderer:InputSubForm base 1`] = `
<body
  class="is-modalOpened"
  style="width: calc(100% - 0px);"
>
  <div>
    <div
      data-amis-theme="cxd"
    >
      <div
        class="amis-Panel amis-Panel--default amis-Panel--form"
        data-role="container"
      >
        <div
          class="amis-Panel-heading"
        >
          <h3
            class="amis-Panel-title"
          >
            <span
              class="amis-TplField fr-view"
            >
              <span>
                表单
              </span>
            </span>
          </h3>
        </div>
        <div
          class="amis-Panel-body"
        >
          <form
            class="amis-Form amis-Form--normal"
            novalidate=""
          >
            <input
              style="display: none;"
              type="submit"
            />
            <div
              class="amis-Form-item amis-Form-item--normal"
              data-amis-name="form"
              data-role="form-item"
            >
              <label
                class="amis-Form-label"
              >
                <span>
                  <span
                    class="amis-TplField fr-view"
                  >
                    <span>
                      子Form
                    </span>
                  </span>
                </span>
              </label>
              <div
                class="cxd-SubFormControl amis-Form-control"
              >
                <div
                  class="amis-SubForm-values"
                >
                  <div
                    class="amis-SubForm-value"
                    data-position="bottom"
                    data-tooltip="编辑详情"
                  >
                    <span
                      class="amis-SubForm-valueLabel"
                    >
                      <span
                        class="amis-TplField fr-view"
                      >
                        <span>
                          设置子表单
                        </span>
                      </span>
                    </span>
                    <a
                      class="amis-SubForm-valueEdit"
                    >
                      <icon-mock
                        classname="icon icon-pencil"
                        icon="pencil"
                      />
                    </a>
                  </div>
                </div>
              </div>
            </div>
          </form>
        </div>
        <div
          class="amis-Panel-footerWrap"
        >
          <div
            class="amis-Panel-btnToolbar amis-Panel-footer"
          >
            <button
              class="amis-Button amis-Button--primary amis-Button--size-default"
              type="submit"
            >
              <span>
                提交
              </span>
            </button>
          </div>
        </div>
      </div>
    </div>
  </div>
  <div
    class="amis-dialog-widget amis-Modal amis-Modal--1th"
    data-amis-theme="cxd"
    role="dialog"
  >
    <div
      class="amis-Modal-overlay in"
    />
    <div
      class="amis-Modal-content in"
    >
      <div
        class="amis-Modal-header"
      >
        <a
          class="amis-Modal-close"
          data-position="left"
          data-tooltip="关闭"
        >
          <icon-mock
            classname="icon icon-close"
            icon="close"
          />
        </a>
        <div
          class="amis-Modal-title"
        >
          配置子表单
        </div>
      </div>
      <div
        class="amis-Modal-body"
        role="dialog-body"
      >
        <div
          class="amis-Form amis-Form--horizontal"
          novalidate=""
        >
          <input
            style="display: none;"
            type="submit"
          />
          <div
            class="amis-Form-item amis-Form-item--horizontal"
            data-amis-name="a"
            data-role="form-item"
          >
            <label
              class="amis-Form-label amis-Form-itemColumn--normal"
            >
              <span>
                <span
                  class="amis-TplField fr-view"
                >
                  <span>
                    A
                  </span>
                </span>
              </span>
            </label>
            <div
              class="amis-Form-value"
            >
              <div
                class="amis-Form-control cxd-TextControl"
              >
                <div
                  class="amis-TextControl-input"
                >
                  <input
                    autocomplete="off"
                    class=""
                    name="a"
                    placeholder=""
                    size="10"
                    type="text"
                    value=""
                  />
                </div>
              </div>
            </div>
          </div>
          <div
            class="amis-Form-item amis-Form-item--horizontal"
            data-amis-name="b"
            data-role="form-item"
          >
            <label
              class="amis-Form-label amis-Form-itemColumn--normal"
            >
              <span>
                <span
                  class="amis-TplField fr-view"
                >
                  <span>
                    B
                  </span>
                </span>
              </span>
            </label>
            <div
              class="amis-Form-value"
            >
              <div
                class="amis-Form-control cxd-TextControl"
              >
                <div
                  class="amis-TextControl-input"
                >
                  <input
                    autocomplete="off"
                    class=""
                    name="b"
                    placeholder=""
                    size="10"
                    type="text"
                    value=""
                  />
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        class="amis-Modal-footer"
      >
        <button
          class="amis-Button amis-Button--default amis-Button--size-default"
          type="button"
        >
          <span>
            取消
          </span>
        </button>
        <button
          class="amis-Button amis-Button--primary amis-Button--size-default"
          type="button"
        >
          <span>
            确认
          </span>
        </button>
      </div>
    </div>
  </div>
</body>
`;

exports[`Renderer:InputSubForm with addButtonClassName & itemsClassName & itemClassName & addButtonText & labelField 1`] = `
<div>
  <div
    data-amis-theme="cxd"
  >
    <div
      class="amis-Panel amis-Panel--default amis-Panel--form"
      data-role="container"
    >
      <div
        class="amis-Panel-heading"
      >
        <h3
          class="amis-Panel-title"
        >
          <span
            class="amis-TplField fr-view"
          >
            <span>
              表单
            </span>
          </span>
        </h3>
      </div>
      <div
        class="amis-Panel-body"
      >
        <form
          class="amis-Form amis-Form--normal"
          novalidate=""
        >
          <input
            style="display: none;"
            type="submit"
          />
          <div
            class="amis-Form-item amis-Form-item--normal"
            data-amis-name="form2"
            data-role="form-item"
          >
            <label
              class="amis-Form-label"
            >
              <span>
                <span
                  class="amis-TplField fr-view"
                >
                  <span>
                    多选
                  </span>
                </span>
              </span>
            </label>
            <div
              class="cxd-SubFormControl amis-Form-control"
            >
              <div
                class="amis-SubForm-values items-wrapper"
              >
                <div
                  class="amis-SubForm-value item-classname"
                >
                  <span
                    class="amis-SubForm-valueLabel"
                  >
                    设置
                  </span>
                  <a
                    class="amis-SubForm-valueEdit"
                    data-index="0"
                  >
                    <icon-mock
                      classname="icon icon-pencil"
                      icon="pencil"
                    />
                  </a>
                  <a
                    class="amis-SubForm-valueDel"
                    data-index="0"
                  >
                    <icon-mock
                      classname="icon icon-close"
                      icon="close"
                    />
                  </a>
                </div>
                <div
                  class="amis-SubForm-value item-classname"
                >
                  <span
                    class="amis-SubForm-valueLabel"
                  >
                    设置
                  </span>
                  <a
                    class="amis-SubForm-valueEdit"
                    data-index="1"
                  >
                    <icon-mock
                      classname="icon icon-pencil"
                      icon="pencil"
                    />
                  </a>
                  <a
                    class="amis-SubForm-valueDel"
                    data-index="1"
                  >
                    <icon-mock
                      classname="icon icon-close"
                      icon="close"
                    />
                  </a>
                </div>
              </div>
              <div
                class="amis-SubForm-toolbar"
              >
                <button
                  class="amis-Button amis-SubForm-addBtn thisis-add-btn"
                  type="button"
                >
                  <icon-mock
                    classname="icon icon-plus"
                    icon="plus"
                  />
                  <span>
                    自定义的新增
                  </span>
                </button>
              </div>
            </div>
          </div>
        </form>
      </div>
      <div
        class="amis-Panel-footerWrap"
      >
        <div
          class="amis-Panel-btnToolbar amis-Panel-footer"
        >
          <button
            class="amis-Button amis-Button--primary amis-Button--size-default"
            type="submit"
          >
            <span>
              提交
            </span>
          </button>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Renderer:InputSubForm with draggable & addable & removable 1`] = `
<div>
  <div
    data-amis-theme="cxd"
  >
    <div
      class="amis-Panel amis-Panel--default amis-Panel--form"
      data-role="container"
    >
      <div
        class="amis-Panel-heading"
      >
        <h3
          class="amis-Panel-title"
        >
          <span
            class="amis-TplField fr-view"
          >
            <span>
              表单
            </span>
          </span>
        </h3>
      </div>
      <div
        class="amis-Panel-body"
      >
        <form
          class="amis-Form amis-Form--normal"
          novalidate=""
        >
          <input
            style="display: none;"
            type="submit"
          />
          <div
            class="amis-Form-item amis-Form-item--normal"
            data-amis-name="form"
            data-role="form-item"
          >
            <label
              class="amis-Form-label"
            >
              <span>
                <span
                  class="amis-TplField fr-view"
                >
                  <span>
                    子Form
                  </span>
                </span>
              </span>
            </label>
            <div
              class="cxd-SubFormControl amis-Form-control"
            >
              <div
                class="amis-SubForm-values"
              >
                <div
                  class="amis-SubForm-value"
                >
                  <a
                    class="amis-SubForm-valueDragBar"
                  >
                    <icon-mock
                      classname="icon icon-drag-bar"
                      icon="drag-bar"
                    />
                  </a>
                  <span
                    class="amis-SubForm-valueLabel"
                  >
                    <span
                      class="amis-TplField fr-view"
                    >
                      <span>
                        设置val-b-change
                      </span>
                    </span>
                  </span>
                  <a
                    class="amis-SubForm-valueEdit"
                    data-index="0"
                  >
                    <icon-mock
                      classname="icon icon-pencil"
                      icon="pencil"
                    />
                  </a>
                  <a
                    class="amis-SubForm-valueDel"
                    data-index="0"
                  >
                    <icon-mock
                      classname="icon icon-close"
                      icon="close"
                    />
                  </a>
                </div>
                <div
                  class="amis-SubForm-value"
                >
                  <a
                    class="amis-SubForm-valueDragBar"
                  >
                    <icon-mock
                      classname="icon icon-drag-bar"
                      icon="drag-bar"
                    />
                  </a>
                  <span
                    class="amis-SubForm-valueLabel"
                  >
                    <span
                      class="amis-TplField fr-view"
                    >
                      <span>
                        设置val-c
                      </span>
                    </span>
                  </span>
                  <a
                    class="amis-SubForm-valueEdit"
                    data-index="1"
                  >
                    <icon-mock
                      classname="icon icon-pencil"
                      icon="pencil"
                    />
                  </a>
                  <a
                    class="amis-SubForm-valueDel"
                    data-index="1"
                  >
                    <icon-mock
                      classname="icon icon-close"
                      icon="close"
                    />
                  </a>
                </div>
                <div
                  class="amis-SubForm-value"
                >
                  <a
                    class="amis-SubForm-valueDragBar"
                  >
                    <icon-mock
                      classname="icon icon-drag-bar"
                      icon="drag-bar"
                    />
                  </a>
                  <span
                    class="amis-SubForm-valueLabel"
                  >
                    <span
                      class="amis-TplField fr-view"
                    >
                      <span>
                        设置val-d
                      </span>
                    </span>
                  </span>
                  <a
                    class="amis-SubForm-valueEdit"
                    data-index="2"
                  >
                    <icon-mock
                      classname="icon icon-pencil"
                      icon="pencil"
                    />
                  </a>
                  <a
                    class="amis-SubForm-valueDel"
                    data-index="2"
                  >
                    <icon-mock
                      classname="icon icon-close"
                      icon="close"
                    />
                  </a>
                </div>
              </div>
              <div
                class="amis-SubForm-toolbar"
              >
                <span
                  class="amis-Combo-dragableTip"
                />
              </div>
            </div>
          </div>
        </form>
      </div>
      <div
        class="amis-Panel-footerWrap"
      >
        <div
          class="amis-Panel-btnToolbar amis-Panel-footer"
        >
          <button
            class="amis-Button amis-Button--primary amis-Button--size-default"
            type="submit"
          >
            <span>
              提交
            </span>
          </button>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Renderer:InputSubForm with multiple & maxLength & btnLabel 1`] = `
<div>
  <div
    data-amis-theme="cxd"
  >
    <div
      class="amis-Panel amis-Panel--default amis-Panel--form"
      data-role="container"
    >
      <div
        class="amis-Panel-heading"
      >
        <h3
          class="amis-Panel-title"
        >
          <span
            class="amis-TplField fr-view"
          >
            <span>
              表单
            </span>
          </span>
        </h3>
      </div>
      <div
        class="amis-Panel-body"
      >
        <form
          class="amis-Form amis-Form--normal"
          novalidate=""
        >
          <input
            style="display: none;"
            type="submit"
          />
          <div
            class="amis-Form-item amis-Form-item--normal"
            data-amis-name="form"
            data-role="form-item"
          >
            <label
              class="amis-Form-label"
            >
              <span>
                <span
                  class="amis-TplField fr-view"
                >
                  <span>
                    子Form
                  </span>
                </span>
              </span>
            </label>
            <div
              class="cxd-SubFormControl amis-Form-control"
            >
              <div
                class="amis-SubForm-values"
              >
                <div
                  class="amis-SubForm-value"
                >
                  <span
                    class="amis-SubForm-valueLabel"
                  >
                    <span
                      class="amis-TplField fr-view"
                    >
                      <span>
                        设置val-1-1
                      </span>
                    </span>
                  </span>
                  <a
                    class="amis-SubForm-valueEdit"
                    data-index="0"
                  >
                    <icon-mock
                      classname="icon icon-pencil"
                      icon="pencil"
                    />
                  </a>
                  <a
                    class="amis-SubForm-valueDel"
                    data-index="0"
                  >
                    <icon-mock
                      classname="icon icon-close"
                      icon="close"
                    />
                  </a>
                </div>
                <div
                  class="amis-SubForm-value"
                >
                  <span
                    class="amis-SubForm-valueLabel"
                  >
                    <span
                      class="amis-TplField fr-view"
                    >
                      <span>
                        设置val-2-1
                      </span>
                    </span>
                  </span>
                  <a
                    class="amis-SubForm-valueEdit"
                    data-index="1"
                  >
                    <icon-mock
                      classname="icon icon-pencil"
                      icon="pencil"
                    />
                  </a>
                  <a
                    class="amis-SubForm-valueDel"
                    data-index="1"
                  >
                    <icon-mock
                      classname="icon icon-close"
                      icon="close"
                    />
                  </a>
                </div>
              </div>
              <div
                class="amis-SubForm-toolbar"
              >
                <button
                  class="amis-Button amis-SubForm-addBtn"
                  disabled=""
                  type="button"
                >
                  <icon-mock
                    classname="icon icon-plus"
                    icon="plus"
                  />
                  <span>
                    新增一项
                  </span>
                </button>
              </div>
            </div>
          </div>
        </form>
      </div>
      <div
        class="amis-Panel-footerWrap"
      >
        <div
          class="amis-Panel-btnToolbar amis-Panel-footer"
        >
          <button
            class="amis-Button amis-Button--primary amis-Button--size-default"
            type="submit"
          >
            <span>
              提交
            </span>
          </button>
        </div>
      </div>
    </div>
  </div>
</div>
`;
